<resources>
    <string name="app_name">WeMeet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_logo_desc">Login Logo</string>
    <string name="title_activity_feed">Feed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_with_fb">Login with facebook</string>
    <string name="no_network_connection_toast">No Internet Connection</string>
    <string name="testEmail">foo@example.com</string>
    <string name="testPassword">hello</string>
</resources>
